# unify

./: .gitignore  ANTHROPIC_OVERLOAD_SOLUTION.md  CLIENT_LIBRARY_GUIDE.md  DATABASE_MIGRATION_GUIDE.md  DEMO_README.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  FRIEND_INSTALL_GUIDE.md  FRIEND_QUICK_START.md  MANIFEST.in  OPENAI_ALIGNMENT_PLAN.md  PAYMENT_SETUP_GUIDE.md  PYPI_PUBLISH_GUIDE.md  Procfile  README.md  RESEND_SETUP_GUIDE.md  SELF_HOSTING_GUIDE.md  USAGE_EXAMPLE.py  cool_demo.py  demo.py  deploy.py  docker-compose.yml  env_example.txt  final_verification_test.py  fix_frontend_urls.py  friend_test_script.py  package-lock.json  pyproject.toml  quick_start.sh  railway.json  requirements.txt  setup.py  simple_api_test.py  simple_cool_demo.py  test_client_library.py  test_deployed_backend.py  test_fresh_install.py  test_new_api_keys.py  test_new_user_complete.py  test_postgres_migration.py  (+3 more)
api_gateway/: API_KEY_TESTING.md  COMPLETE_SETUP_GUIDE.md  DASHBOARD_IMPROVEMENTS.md  DASHBOARD_README.md  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURE_ROADMAP.md  QUICK_START.md  README.md  UI_IMPROVEMENTS.md  USER_GUIDE.md  YOUR_API_KEY.md  analytics.py  auth.py  auth_backup.py  check_env.py  client_integration_example.py  client_requirements.txt  config.py  dashboard.py  dashboard_enhanced.py  dashboard_enhanced_ui.py  dashboard_fixed.py  dashboard_modern.py  database.py  debug_api_key.py  debug_chat_timeout.py  debug_response.py  debug_unillm.py  demo_with_real_keys.py  email_service.py  env_example.txt  final_comprehensive_test.py  get_api_key.py  interactive_test.py  launch_dashboard.py  main.py  main_phase2.py  main_phase2_backup.py  main_phase2_backup2.py  (+43 more)
examples/: README_DEMO.md  advanced_usage.py  basic_usage.py  comprehensive_model_test.py  multi_provider_demo.py  pypi_demo.py  simple_client_example.py  simple_model_test.py  simple_test.py  working_models_demo.py
frontend/: DEPLOYMENT_GUIDE.md  nginx.conf  package-lock.json  package.json  railway.json  tailwind.config.js  test_auth.html
frontend/src/: App.tsx
frontend/src/components/: CreditPurchase.tsx  Dashboard.tsx  EmailVerification.tsx  Features.tsx  LandingPage.tsx  LoginPage.tsx  LoginSuccess.tsx  Navbar.tsx  PaymentMethodSetup.tsx  Pricing.tsx  Quickstart.tsx  StripePayment.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/utils/: config.ts
src/unillm/: README.md  __init__.py  anthropic.py  client.py  client_models.py  exceptions.py  models.py  openai.py  registry.py
src/unillm/adapters/: __init__.py  anthropic_adapter.py  base.py  cohere_adapter.py  gemini_adapter.py  mistral_adapter.py  openai_adapter.py
test_env/: pyvenv.cfg
tests/: __init__.py  test_models.py  test_registry.py
(+5 files in other folders)
