[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unifyllm-sdk"
version = "0.1.4"
description = "Unified Python client for multiple LLM providers (OpenAI, Anthropic, etc.) with drop-in compatibility."
readme = "src/unillm/README.md"
requires-python = ">=3.7"
authors = [
  { name = "Sahil Handa", email = "sahilhandauni@gmail.com" }
]
license = { file = "LICENSE" }
dependencies = [
  "requests>=2.28.0",
  "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/unillm/unillm-python"
Repository = "https://github.com/unillm/unillm-python"
Documentation = "https://docs.unillm.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 